ReplSetConfig::operator== may incorrectly return true if two instances differ only in the value of buildIndexes.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.2
    • Affects Version/s: 2.1.1
    • Component/s: Replication
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Note the last clause. Should really be

      buildIndex == r.buildIndexes

      , not

      buildIndexes == buildIndexes

      .

                      return _id==r._id && votes == r.votes && h == r.h && priority == r.priority &&
                             arbiterOnly == r.arbiterOnly && slaveDelay == r.slaveDelay && hidden == r.hidden &&
                             buildIndexes == buildIndexes;
      

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: