SERVER-6060: Fix comparison operator ReplSetConfig::operator==.